; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopdm.c_m68k_op_eor_8_ix.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopdm.c_m68k_op_eor_8_ix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DX = common dso_local global i32 0, align 4
@FLAG_N = common dso_local global i32 0, align 4
@FLAG_Z = common dso_local global i32 0, align 4
@CFLAG_CLEAR = common dso_local global i32 0, align 4
@FLAG_C = common dso_local global i32 0, align 4
@VFLAG_CLEAR = common dso_local global i32 0, align 4
@FLAG_V = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_eor_8_ix() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 (...) @EA_AY_IX_8()
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* @DX, align 4
  %5 = load i32, i32* %1, align 4
  %6 = call i32 @m68ki_read_8(i32 %5)
  %7 = xor i32 %4, %6
  %8 = call i32 @MASK_OUT_ABOVE_8(i32 %7)
  store i32 %8, i32* %2, align 4
  %9 = load i32, i32* %1, align 4
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @m68ki_write_8(i32 %9, i32 %10)
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @NFLAG_8(i32 %12)
  store i32 %13, i32* @FLAG_N, align 4
  %14 = load i32, i32* %2, align 4
  store i32 %14, i32* @FLAG_Z, align 4
  %15 = load i32, i32* @CFLAG_CLEAR, align 4
  store i32 %15, i32* @FLAG_C, align 4
  %16 = load i32, i32* @VFLAG_CLEAR, align 4
  store i32 %16, i32* @FLAG_V, align 4
  ret void
}

declare dso_local i32 @EA_AY_IX_8(...) #1

declare dso_local i32 @MASK_OUT_ABOVE_8(i32) #1

declare dso_local i32 @m68ki_read_8(i32) #1

declare dso_local i32 @m68ki_write_8(i32, i32) #1

declare dso_local i32 @NFLAG_8(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
